rust/crates/arbor/tests/snapshots/test__render_tree_with_complex_debug1.snap
---
source: crates/arbor/tests/test.rs
expression: "format!(\"{}\", render)"
---
[RF]node 1
[RO]root
[TF]node 1.1
[MF]node 1.2
[MF]node 1.3
[MO][TF]node 1.3.1
[MO][TO][BF]node
[MO][TO][BO]1.3.1.1
[MO][MF]node 1.3.2
[MO][BF]node 1.3.3
[MO][BO][TF]node
[MO][BO][TO]1.3.3.1
[MO][BO][BF]node
[MO][BO][BO]1.3.3.2
[BF]node 1.4
[BO][TF]node 1.4.1
[BO][MF]node 1.4.2
[BO][BF]node 1.4.3
[BO][BO][TF]node
[BO][BO][TO]1.4.3.1
[BO][BO][BF]node
[BO][BO][BO]1.4.3.2
