rust/crates/arbor/tests/snapshots/test__render_tree_with_complex_debug12.snap
---
source: crates/arbor/tests/test.rs
expression: "format!(\"{}\", render)"
---
[RF]node 1
[RO]root
[TF]node 1.1
[MF]node 1.2
[MF]node 1.3
[TF]node
[TO]1.3.1
[BF]node
[BO]1.3.1.1
[MF]node
[MO]1.3.2
[BF]node
[BO]1.3.3
[TF]node
[TO]1.3.3.1
[BF]node
[BO]1.3.3.2
[BF]node 1.4
[TF]node
[TO]1.4.1
[MF]node
[MO]1.4.2
[BF]node
[BO]1.4.3
[TF]node
[TO]1.4.3.1
[BF]node
[BO]1.4.3.2
